# teehr

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTE.md  Dockerfile  LICENSE  README.md  api.html  api_dataset_index.html  api_evaluation_index.html  api_fetch_index.html  api_metrics_index.html  api_visualization_index.html  coverage.json  download_spark_jars.py  genindex.html  index.html  noxfile.py  objects.inv  package-list.txt  py-modindex.html  pyproject.toml  pytest.ini  report.json  search.html  searchindex.js  spark-defaults.conf  temp.json  upgrade_python.md  version.txt
.github/workflows/: build-and-push-release.yml  build-and-push-v0.5.x-dev.yml  build-and-push-v0.6-dev.yml  docker-publish-dev.yml  docker-publish-release.yml  docker-publish.yml  docs-publish.yml  documentation-publish.yml  publish-package.yml  run-tests.yml  test_workflow.yml
_downloads/54a0c1b8411bac4e7c8b8ac159ae8eb4/: 08_adding_calculated_fields.ipynb
_downloads/a0891a841915a60903594f20c55efa14/: 06_grouping_and_filtering.ipynb
_downloads/ce1cc83447fc47747029866633f260bd/: 02_loading_local_data.ipynb
_modules/: index.html  teehr.html
_sources/: api.rst.txt  api_dataset_index.rst.txt  api_evaluation_index.rst.txt  api_fetch_index.rst.txt  api_visualization_index.rst.txt  index.rst.txt
_sources/api/: m_index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/changelog/: index.md.txt  index.rst.txt
_sources/development/: index.rst.txt
_sources/example_notebooks/: index.rst.txt
_sources/getting_started/: data_model.rst.txt  index.rst.txt  spark_guide.rst.txt  teehr_framework.rst.txt
_sources/tutorials/: grouping_and_filtering.rst.txt  joining_timeseries.rst.txt
_sources/user_guide/: index.rst.txt  tables.rst.txt
_static/: documentation_options.js
_static/css/: teehr.css
_static/js/: toc_strip_classname.js
api/: ev_index.html  index.html  io_index.html  m_index.html
autoapi/: index.html
autoapi/add_domains/: index.html
autoapi/bootstrap_funcs/: index.html
autoapi/bootstrap_models/: index.html
autoapi/const/: index.html
autoapi/dataframe_accessor/: index.html
autoapi/evaluation/: index.html
autoapi/fetch/: index.html
autoapi/filter_format/: index.html
autoapi/filters/: index.html
autoapi/grid_utils/: index.html
autoapi/gumboot_bootstrap/: index.html
autoapi/joined_timeseries/: index.html
autoapi/load/: index.html
autoapi/location_attributes/: index.html
autoapi/location_crosswalks/: index.html
autoapi/locations/: index.html
autoapi/metric_attributes/: index.html
autoapi/metric_enums/: index.html
autoapi/metric_format/: index.html
autoapi/metric_funcs/: index.html
autoapi/metric_models/: index.html
autoapi/metrics/: index.html
autoapi/ngen_example/: index.html
autoapi/nwm22_grid/: index.html
autoapi/nwm22_point/: index.html
autoapi/nwm30_grid/: index.html
autoapi/nwm30_point/: index.html
autoapi/nwm_grids/: index.html
autoapi/nwm_points/: index.html
autoapi/point_utils/: index.html
autoapi/retrospective_grids/: index.html
autoapi/retrospective_points/: index.html
autoapi/setup_evaluation/: index.html
autoapi/str_enum/: index.html
autoapi/table_enums/: index.html
autoapi/tables/: index.html
autoapi/teehr/: index.html
autoapi/timeseries/: index.html
autoapi/two_site_debug_script/: index.html
autoapi/user_defined_fields/: index.html
autoapi/usgs/: index.html
autoapi/utils/: index.html
changelog/: index.html
design/: .$teehr-arch.drawio.bkp  .$teehr-class-diagram.drawio.bkp  .$teehr-schema.drawio.bkp  .$teehr-schema.drawio.dtmp  .$teehr-system-entity-diagram.drawio.bkp  .$teehr-workflow.drawio.bkp  brainstorm.md  data_volume_estiimates.md  domains.md  protocol.yaml  teehr-arch.drawio  teehr-schema.drawio  teehr-system-entity-diagram.drawio  teehr-workflow.drawio  temp.ipynb
development/: index.html
docs/: data_models.md  queries.md  release_process.md
docs/drawio/: data_model.drawio  joined_timeseries.drawio  metrics.drawio  ts_chars.drawio
docs/sphinx/: Makefile  api.rst  api_metrics_index.rst  conf.py  index.rst  pre-commit-output.txt  version_switcher.json
example_notebooks/: index.html
example_notebooks/notebooks/: 01_loading_local_data.html  03_ensemble_metrics.html  04_fetching_nwm_streamflow.html  05_fetching_nwm_gridded_data.html
examples/loading/: create_database.py  grid_loading_example.ipynb  (+5 more)
getting_started/: data_model.html  index.html  queries.html  spark_guide.html  teehr_framework.html
playground/: delta-table.ipynb  readme.md
references/: readme.md
requirements/: minimum.txt  test.txt
src/: __init__.py
teehr-hub/: .gitignore  README.md
tests/: FIXTURE_USAGE.md  OPTIMIZATION_SUMMARY.md  README.md  conftest.py  evaluation_test_class.py  setup_v0_3_study.py  test_add_domain_contents.py  test_add_domains_attributes.py  test_add_domains_configuration.py  test_add_domains_unit.py  test_add_domains_variable.py  test_add_udfs.py  test_clone_from_s3.py  test_create_joined_timeseries.py  test_create_new_study.py  test_dask_metric_queries.py  test_dataframe_accessor.py  test_duckdb_api.py  test_duckdb_database.py  test_duckdb_dataframe_accessors.py  test_duckdb_filter_formatting.py  test_duckdb_joined_parquet.py  test_duckdb_metric_filter_formatting.py  test_duckdb_metric_queries.py  test_duckdb_metric_queries_retro.py  test_duckdb_pandas_accessors.py  test_duckdb_pandas_compare.py  test_duckdb_pandas_tds_compare.py  test_duckdb_parquet.py  test_duckdb_queries_file_list.py  test_duckdb_spearman_corr.py  test_duckdb_timeseries_queries.py  test_fastapi_endpoints.py  test_fetch_and_load.py  test_filter_formatting.py  test_filter_validation.py  test_filters.py  test_generate_weights.py  test_get_metrics_query.py  test_get_table_field_enums.py  (+45 more)
tutorials/: grouping_and_filtering.html  joining_timeseries.html  tutorials_index.html
user_guide/: UPDATE_PLAN.html  evaluation.html  fetching.html  generating.html  index.html  tables.html  views.html  visualization.html
warehouse/: initialize_warehouse.py
(+1544 files in other folders)
