[tool.poetry]
name = "teehr"
version = "0.5.2"
description = "Tools for Exploratory Evaluation in Hydrologic Research"
authors = [
    "RTI International",
    "Matthew Denno <mdenno@rti.org>",
    "Katie van Werkhoven <kvanwerkhoven@rti.org>",
    "Sam Lamont <slamont@rti.org>",
    "Sam Landsteiner <slandsteiner@rti.org>",
]
license = "GNU v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
geopandas = ">=1,<2"
pydantic = ">=2.4.2,<3"
dask = ">=2025,<2026"
fsspec = ">=2023.10.0,<2026"
ujson = ">=5.8.0,<6"
kerchunk = ">=0.2.2,<1"
gcsfs = ">=2023.10.0,<2026"
s3fs = ">=2023.10.0,<2026"
zarr = ">=2.16.1,<3"
rioxarray = ">=0.15.0,<1"
rasterio = ">=1.3.0,<2"
h5py = ">=3.12.1,<4"
pyarrow = ">=15.0.0,<21"
httpx = ">=0.25.1,<1"
pandas = ">=2.2.0,<3"
pyspark = {extras = ["pandas-on-spark"], version = ">=4,<5"}
dataretrieval = ">=1.0.9,<2"
numba = ">=0.60.0,<1"
arch = ">=7.0.0,<8"
pandera = {extras = ["pyspark"], version = ">=0.20.4,<1"}
netcdf4 = ">=1.6.5,<2"
apache-sedona = ">=1.7.0,<2"
scoringrules = ">=0.7.1,<1"
pyiceberg = ">=0.9.1,<1"
lxml = ">=5.4.0,<6"
bokeh = ">=3.7.3,<4"
protobuf = "5.28.3"
psutil = ">=7.0.0,<8"
baseflow = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.3"
flake8 = ">=6.1.0"
nox-poetry = "^1.2.0"
pytest-cov = "^6.2.1"
pytest-json-ctrf = "^0.3.5"

[tool.poetry.group.dev.dependencies]
sphinx = ">=7.2.6"
sphinx-design = ">=0.5.0"
numpydoc = ">=1.6.0"
pre-commit = ">=3.6.0"
pre-commit-hooks = ">=4.5.0"
flake8-docstrings = ">=1.7.0"
myst-nb = ">=1.0.0"
nbstripout = ">=0.7.1"
pickleshare = ">=0.7.5"
sphinx-autoapi = "3.0.0"
pydata-sphinx-theme = ">=0.16.0"
sphinx-autobuild = ">=2024.10.3"
dask = {extras = ["distributed"], version = "^2025.5.1"}
tomli = ">=2.2.1"
geoviews = ">=1.14.1,<2"
hvplot = ">=0.12.0,<1"


[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",  # No examples section found
    "RT01",  # No Returns section found
    "SA01",  # See Also section not found
    "ES01",  # No extended summary found
    "GL01",  # Docstring text (summary) should start in the line immediately
    "SS06",  # Summary should fit in a single line
    "PR01",  # Parameters {missing_params} not documented
    "GL02"   # Closing quotes should be placed in the line after the last text in docstring"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"